--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "typecheck": "tsc --noEmit --skipLibCheck --project ./tsconfig.json"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,6 +35,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "mini-css-extract-plugin": "^0.11.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
     "stylelint": "^13.7.2",
@@ -53,7 +56,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "reset-css": "^5.0.1"
   }
 }
